# Lane-Following-Robot

src/lane_following/: CMakeLists.txt  package.xml
src/lane_following/urdf/: lane_robot.urdf.xacro
src/lane_following_robot/: CMakeLists.txt  package.xml
src/lane_following_robot/include/lane_following_robot/: camera_debug.h  lane_detector.h
src/lane_following_robot/launch/: camera_debug.launch.py  display.launch.py  gazebo.launch.py
src/lane_following_robot/src/: camera_debug.cpp  lane_detector.cpp
src/lane_following_robot/urdf/: lane_robot.urdf.xacro
src/lane_following_robot/worlds/: lane_world.world
